# chessKnightMoves

./: CMakeLists.txt  README.txt  chessKnightMoves.c
